--- a/code/style.css
+++ b/code/style.css
@@ -1,15 +1,15 @@
 @font-face {
   font-family: "Sana Sans";
   src:
-    url("/code/assets/Fonts/SanaSans-RegularDisplay.woff2") format("woff2"),
-    url("/code/assets/Fonts/SanaSans-RegularDisplay.woff") format("woff");
+    url("/assets/Fonts/SanaSans-RegularDisplay.woff2") format("woff2"),
+    url("/assets/Fonts/SanaSans-RegularDisplay.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 html,
 body {
-  margin: 0 40px;
+  margin: 0 3%;
   padding: 0;
   font-family: "Sana Sans", sans-serif;
   color: rgb(0, 0, 0);
