--- a/code/style.css
+++ b/code/style.css
@@ -121,8 +121,17 @@ i {
   width: 70%;
   border-radius: 20px;
   margin-top: 40px;
+  transition: all 0.5s ease-in-out;
+  filter: blur(0px) grayscale(0%);
 }
 
+img:hover {
+  filter: blur(2px) grayscale(20%) contrast(100%);
+}
+
+img::-webkit-scrollbar {
+  scroll-behavior: smooth;
+}
 i {
   margin: 0 10px;
 }
@@ -281,6 +290,14 @@ h2 {
   padding: 50px 0px;
   margin: 0;
   color: rgba(0, 0, 0, 0.15);
+}
+
+.premble::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #ff0055;
 }
 
 footer {
