--- a/code/style.css
+++ b/code/style.css
@@ -1,7 +1,6 @@
 html {
   box-sizing: border-box;
-  background-color: transparent;
-  background-image: linear-gradient(180deg, #99ad73 0, #F8F8F8 800px);
+  background-color: #c1b8a9;
   color: #000;
 }
 body {
@@ -10,6 +9,8 @@ body {
 /* header */
 header {
   margin: 0;
+  padding: 10px 0;
+  border-bottom: #4c6051 2px solid;
 }
 .header-content-width {
   margin: 0 3.5rem;
@@ -19,13 +20,13 @@ header {
 }
 .main-logo {
   font-family: Arial, Helvetica, sans-serif;
-  color: #077707;
+  color: #4c6051;
   margin: 0;
 }
 .main-logo>span {
   font-size: 55px;
   font-style: italic;
-  color: #045804;
+  color: #1e391e;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-decoration: underline;
 }
@@ -50,22 +51,41 @@ header {
 }
 .big-news-content-width {
   display: grid;
-  grid-template-columns: 2fr 1fr;
-  gap: 15px;
+  grid-template-columns: 4fr 2fr;
+  gap: 35px;
 }
 .big-news-img>img {
   object-fit: cover;
-  width: 700px;
+  width: 100%;
   height: 500px;
 }
 .big-news-text>h1 {
-  font-size: 2.9rem;
+  font-size: 3.3rem;
   text-transform: uppercase;
-  color: #fff;
+  color: #1e391e;
 }
 .big-news-text>h3 {
   font-size: 1.6rem;
+  color: #000;
+}
+.big-news-btn {
+  background-color: #1e391e;
   color: #fff;
+  border: none;
+  padding: 8px 20px;
+  cursor: pointer;
+  font-size: 1.1rem;
+}
+.big-news-btn:hover {
+  background-color: #4c6051;
+  font-weight: 600;
+}
+/* divider h2 */
+.divider-h2 {
+  margin: 4rem 3.5rem 2.5rem;
+  color: #1e391e;
+  border-bottom: #4c6051 2px solid;
+  padding-bottom: 15px
 }
 
 /* small box news */
@@ -73,33 +93,70 @@ header {
   margin: 0 3.5rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 15px;
+  gap: 25px 15px;
 }
 .small-box-news-item {
-  background-color: #4c6051;
-  height: 300px;
+  border-bottom: #1e391e 2px solid;
+  padding: 0 0 10px;;
 } 
-
-@media only screen and (max-width: 1600px) {
-  
+.small-box-news-item>p {
+  font-style: italic;
 }
+.small-box-news-item-img {
+  width: 100%;
+  height: 550px;
+  object-fit: cover;
+}
+.small-news-btn {
+  background-color: #1e391e;
+  color: #fff;
+  border: none;
+  padding: 8px 20px;
+  cursor: pointer;
+  font-size: 1.1rem;
+  margin: 0;
+}
+
+/* footer */
+footer {
+  background-color: #1e391e;
+  color: #fff;
+  margin: 70px 0 0;
+}
+footer>div>p {
+  margin: 0;
+  padding: 50px 0;
+  text-align: center;
+}
+
 @media only screen and (max-width: 1024px) {
-  body {
-    background-color: white;
-  }
   .nav-small-screen {
     display: inline-block;
   }
-  .nav-small-screen {
+  .nav-small-screen>ul {
     list-style: none;
     text-decoration: none;
   }
   .nav-desktop {
     display: none;
   }
+  .small-box-news {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+  }
+  .big-news-content-width {
+    grid-template-columns: 1fr;
+  }
 }
-@media only screen and (max-width: 520px) {
-  body {
-    background-color: pink;
+@media only screen and (max-width: 620px) {
+  .small-box-news {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .header-content-width,
+  .small-box-news {
+    margin: 0 2.5rem;
+  }
+  .big-news {
+    margin: 2rem 2.5rem;
   }
 }
