--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,324 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #f8d4f6;
+  color: #141132;
+}
+
+header {
+  background-color: aliceblue;
+  min-width: 370px;
+  margin: 10px;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+h1 {
+  font-size: 24px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+h2 {
+  font-size: 14px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+h3 {
+  font-size: 18px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+p {
+  font-size: 12px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+
+.big-ptext {
+  font-size: 16px;
+}
+
+.grid-header {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  align-items: center;
+}
+
+.logo {
+  grid-column: 1 / 2;
+  border-radius: 100%;
+  max-width: 75px;
+  max-height: 75px;
+  padding: 4px;
+}
+
+.logo-site-name {
+  grid-column: 2 / 3;
+}
+
+.nav-bar {
+  grid-column: 8 / 9;
+}
+
+a {
+  text-decoration: none;
+  color: #fb62ac;
+  display: flex;
+  flex-direction: row;
+  padding: 5px;
+}
+
+.nav-links {
+  display: none;
+}
+
+.hamburger {
+  background-color: #fb62ac;
+  color: rgb(253, 168, 57);
+  border: #f0f8d4 solid 2px;
+}
+
+.big-news-box {
+  background-color: blanchedalmond;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2px;
+  margin: 10px;
+  min-width: 370px;
+  border-radius: 20px;
+  max-height: 500px;
+}
+
+.big-news-img {
+  max-height: 40%;
+  max-width: 40%;
+  padding: 12px 10px 2px;
+  border-radius: 20px;
+}
+
+.big-news {
+  padding: 2px;
+  max-width: 75%;
+  max-height: 45%;
+}
+
+.small-news-box {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
+  align-items: center;
+  text-align: start;
+  margin: 10px;
+  min-width: 370px;
+  gap: 4px;
+  border-radius: 20px;
+  max-height: fit-content;
+  background-color: #f0f8d4;
+}
+
+.small-news-img1 {
+  grid-column: 1 / 2;
+  align-content: center;
+  display: block;
+  padding: 2px;
+}
+
+.small-news-img2 {
+  grid-column: 1 / 2;
+  align-content: center;
+  display: block;
+  padding: 2px;
+}
+
+
+.small-news1 {
+  grid-column: 2 / 5;
+  display: block;
+  align-content: center;
+  flex-direction: column;
+  text-align: left;
+  padding: 2px;
+  min-width: 90%;
+  min-height: 90%;
+
+}
+
+.small-news2 {
+  grid-column: 2 / 5;
+  display: block;
+  flex-direction: column;
+  text-align: left;
+  padding: 2px;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+img {
+  display: flex;
+  max-width: 100%;
+  border-radius: 20px;
+}
+
+@media (min-width: 668px) and (max-width:1024px) {
+
+  .nav-bar {
+    grid-column: 7 / 9;
+  }
+
+  .nav-links {
+    display: block;
+    list-style-type: none;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .big-news-box {
+    background-color: blanchedalmond;
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    text-align: start;
+    gap: 2px;
+    margin: 10px;
+    min-width: 370px;
+    border-radius: 20px;
+    max-height: 30%;
+  }
+
+  .big-news-img {
+    max-height: 35%;
+    max-width: 35%;
+    padding: 2px;
+    border-radius: 20px;
+  }
+
+  .small-news-box {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    text-align: start;
+    margin: 10px;
+    min-width: 370px;
+    gap: 1px;
+    border-radius: 20px;
+    max-height: fit-content;
+    background-color: #f0f8d4;
+  }
+
+  .small-news-img1 {
+    grid-column: 1 / 2;
+    align-content: center;
+    display: block;
+    padding: 2px;
+  }
+
+  .small-news-img2 {
+    grid-column: 3 / 4;
+    align-content: center;
+    display: block;
+    padding: 2px;
+  }
+
+
+  .small-news1 {
+    grid-column: 2 / 3;
+    display: block;
+    align-content: center;
+    flex-direction: column;
+    text-align: left;
+    padding: 2px;
+  }
+
+  .small-news2 {
+    grid-column: 4 / 5;
+    display: block;
+    flex-direction: row;
+    text-align: left;
+    padding: 2px;
+  }
+}
+
+@media (min-width: 1025px) {
+
+
+  .nav-bar {
+    grid-column: 7 / 9;
+  }
+
+  .nav-links {
+    display: block;
+    list-style-type: none;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .big-news-box {
+    background-color: blanchedalmond;
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    text-align: start;
+    gap: 2px;
+    margin: 10px;
+    min-width: 370px;
+    border-radius: 20px;
+    max-height: 30%;
+  }
+
+  .big-news-img {
+    max-height: 35%;
+    max-width: 35%;
+    padding: 2px;
+    border-radius: 20px;
+  }
+
+  .small-news-box {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    justify-items: center;
+    align-items: flex-start;
+    text-align: start;
+    margin: 10px;
+    min-width: 370px;
+    gap: 1px;
+    background-color: rgb(252, 227, 239);
+    border-radius: 20px;
+    max-height: fit-content;
+    background-color: #f0f8d4;
+  }
+
+  .small-news-img1 {
+    grid-column: auto;
+    align-content: center;
+    display: block;
+    padding: 2px;
+  }
+
+  .small-news-img2 {
+    grid-column: auto;
+    align-content: center;
+    display: block;
+    padding: 2px;
+  }
+
+
+  .small-news1 {
+    grid-column: auto;
+    display: block;
+    align-content: center;
+    flex-direction: row;
+    text-align: left;
+    padding: 2px;
+  }
+
+  .small-news2 {
+    grid-column: auto;
+    display: block;
+    flex-direction: row;
+    text-align: left;
+    padding: 2px;
+  }
 }
