--- a/code/style.css
+++ b/code/style.css
@@ -9,11 +9,11 @@ header {
   flex-direction: column;
   align-items: center;
   padding: 10px;
+  margin-bottom: 20px;
 }
 
 main {
-  display: grid;
-  grid-template-columns: 1fr;
+  max-width: 1200px;
   padding: 20px;
   border: 2px solid black;
 }
@@ -79,30 +79,24 @@ main {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
   font-size: 5vw;
-  margin-top: -3px;
-  margin-bottom: -16px;
+  margin-top: 0;
+  margin-bottom: -20px;
 }
 
 h5 {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 3vw;
+  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+  font-size: 2.8vw;
   margin-bottom: -2px;
 }
 
 .text-content p {
   font-size: 3vw;
-  padding-bottom: 2vw;
-  border-bottom: 3px solid #444;
 }
 
 .big-news {
   display: grid;
-  grid-template-columns: repeat(auto-fit);
-  /* grid-template-rows: auto auto; */
+  grid-template-columns: 1fr;
   color: black;
-  /* 
-  border: 2px solid black; */
-  margin-bottom: 20px;
 }
 
 .big-image {
@@ -111,69 +105,142 @@ h5 {
   object-fit: cover;
 }
 
+h2 {
+  color: #222;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  border-top: 2px solid #444;
+  border-bottom: 2px solid #444;
+}
+
 .other-news {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  margin: auto;
 }
 
-.other-image {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-  margin-bottom: -10px;
-}
-
-.other-text {
-  color: black;
-  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
-  font-size: 4vw;
-  padding: 5px;
-  margin-top: -12px;
-  margin-bottom: 10px;
-}
-
-.other-text a {
+.article-link {
   text-decoration: none;
   color: inherit;
+  width: 100%;
 }
 
-.other-text p {
-  font-size: 3vw;
-  text-align: right;
-  margin-top: -20px;
-  margin-bottom: 10px;
-  padding-bottom: 2vw;
-  border-bottom: 1px solid #444;
+.article {
+  display: flex;
+  flex-direction: column;
+  transition: background-color 0.3s ease;
+}
+
+.article img {
+  width: 100%;
+  height: auto;
+}
+
+.small-text {
+  color: #222;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.small-text h3 {
+  font-size: 1.5em;
+  margin: 0 0 8px 0;
+}
+
+.small-text .author {
+  font-size: 1.1em;
+  color: #555;
+  margin: 4px 0;
+}
+
+.small-text .subheading {
+  font-size: 1.2em;
+  color: #222;
+}
+
+.article:hover {
+  background-color: #e0e0e0;
 }
 
 .footer {
   background-color: #222;
   color: #fff;
   text-align: center;
+  margin-top: 20px;
   padding: 20px;
 }
 
 .social-media {
-  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 20px 0 20px;
 }
 
 .footer-text {
-  color: magenta;
+  color: hotpink;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin-top: 40px;
   border-top: 1px solid #444;
   padding: 20px;
   font-size: 16px;
 }
 
-@media screen and (max-width: 667px) {
+/* mobile */
+@media (max-width: 667px) {
   .nav-menu {
     display: none;
   }
 }
 
-@media (min-width: 668px) and (max-width: 1280px) {
+/* Tablet view */
+@media (min-width: 668px) and (max-width: 1024px) {
   .hamburger {
     display: none;
   }
 
+  .other-news {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+}
+
+/* Desktop view */
+@media(min-width: 1024px) and (max-width: 1600px) {
+  .hamburger {
+    display: none;
+  }
+
+  main {
+    max-width: 1111px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .text-content h1 {
+    font-size: 48px;
+  }
+
+  .text-content h5 {
+    font-size: 26px;
+  }
+
+  .text-content p {
+    font-size: 24px;
+  }
+
+
+  .other-news {
+    grid-template-columns: repeat(4, 1fr)
+  }
+
+  .article-img {
+    width: 100%;
+  }
+
+  .article {
+    flex-direction: column;
+  }
+
+  .small-text {
+    padding-top: 16px;
+  }
 }
